# suitesparse-metis-for-windows

./: CMakeLists.txt
SuiteSparse/: CMakeLists.txt
SuiteSparse/CHOLMOD/: CMakeLists.txt
SuiteSparse/GPUQREngine/: CMakeLists.txt
SuiteSparse/SPQR/: CMakeLists.txt
SuiteSparse/SuiteSparse_GPURuntime/: CMakeLists.txt
SuiteSparse/UMFPACK/: CMakeLists.txt
